--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/*styling necessary to place Google Map*/
+
 html, body {
     height: 100%;
     margin: 0;
@@ -8,16 +10,38 @@ html, body {
     height: 100%;
 }
 
+/*styling for input box allowing change of location*/
+
 #geocode {
     position: absolute;
-    left: 30px;
     top: 30px;
+    left: 30px;
     z-index: 3;
+    width: 200px;
 }
 
-#location {
-    color: grey;
+/*styling for list view of museums*/
+
+#itemsBox {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    z-index: 3;
+    width: 250px;
+    height: 400px;
+    border-radius: 5px;
+    border: solid 1px lightgray;
+    background-color: white;
+    overflow-y: auto;
 }
 
+h4 {
+    padding-left: 30px;
+    padding-bottom: 10px;
+    border-bottom: solid 1px lightgray;
+    color: #622569 !important;
+}
 
-
+.fa-university:hover {
+    color: #5b9aa0;
+}
