--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*styling necessary to place Google Map*/
+/*Google Map Styling*/
 
 html, body {
     height: 100%;
@@ -10,7 +10,7 @@ html, body {
     height: 100%;
 }
 
-/*styling for input box allowing change of location*/
+/*Geocode Styling*/
 
 #geocode {
     position: absolute;
@@ -20,27 +20,29 @@ html, body {
     width: 200px;
 }
 
-/*styling for list view of museums*/
+/*Listview Header*/
 
-#itemsBox {
+#header {
     position: absolute;
     top: 30px;
     right: 30px;
-    z-index: 3;
     width: 300px;
-    height: 400px;
-    border-radius: 5px;
-    border: solid 1px lightgray;
+    height: 50px;
     background-color: white;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border: 1px solid lightgrey;
 }
 
-h4 {
-    padding-left: 30px;
-    padding-bottom: 10px;
-    border-bottom: solid 1px lightgray;
-    color: #622569 !important;
+#header h5 {
+    margin-left: 80px;
 }
 
-.fa-university:hover {
-    color: #5b9aa0;
+/*Listview Filter*/
+#search {
+    position: absolute;
+    top: 79px;
+    right: 30px;
+    width: 300px;
+    border-radius: 0px !important;
 }
